refactor: remove logs, change names and create word frequency function
