# source/model/articles.ts
@@ -3,7 +3,7 @@ import { Article } from "./article";
 export class Articles {
     constructor(
         public totalArticles: number,
-        public wordFrequency: number,
+        public wordFrequency: any,
         public articles: Article[],
     ) {
         this.totalArticles = totalArticles;
