# source/model/index.ts
@@ -1,4 +1,4 @@
 import { Article } from "./article";
 import { Articles } from "./articles";
 
-export {Article, Articles};
+export { Article, Articles };
