# source/swagger.json
@@ -6,48 +6,86 @@
     "requestBodies": {},
     "responses": {},
     "schemas": {
-		"Article": {
-			"type": "object",
-			"properties": {
-			  "title": {
-				"type": "string",
-				"nullable": false,
-				"readOnly": true
-			  },
-			  "description": {
-				"type": "string",
-				"nullable": false,
-				"readOnly": true
-			  },
-			  "content": {
-				"type": "string",
-				"nullable": false,
-				"readOnly": true
-			  },
-			  "url": {
-				"type": "string",
-				"nullable": false,
-				"readOnly": true
-			  },
-			  "image": {
-				"type": "string",
-				"nullable": false,
-				"readOnly": true
-			  },
-			  "publishAt": {
-				"type": "string",
-				"nullable": false,
-				"readOnly": true
-			  },
-			  "sourceName": {
-				"type": "string",
-				"nullable": false,
-				"readOnly": true
-			  }
-			},
-			"additionalProperties": false
-		  }
-	},
+      "Articles": {
+        "type": "object",
+        "properties": {
+          "totalArticles": {
+            "type": "number",
+            "nullable": false,
+            "readOnly": true
+          },
+          "wordFrequency": {
+            "type": "object",
+            "nullable": false,
+            "readOnly": true
+          },
+          "articles": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "$ref": "#/components/schemas/Article"
+            },
+
+            "nullable": false,
+            "readOnly": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "Article": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string",
+            "nullable": false,
+            "readOnly": true
+          },
+          "description": {
+            "type": "string",
+            "nullable": false,
+            "readOnly": true
+          },
+          "content": {
+            "type": "string",
+            "nullable": false,
+            "readOnly": true
+          },
+          "url": {
+            "type": "string",
+            "nullable": false,
+            "readOnly": true
+          },
+          "image": {
+            "type": "string",
+            "nullable": false,
+            "readOnly": true
+          },
+          "publishAt": {
+            "type": "string",
+            "nullable": false,
+            "readOnly": true
+          },
+          "sourceName": {
+            "type": "string",
+            "nullable": false,
+            "readOnly": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "ErrorMessage": {
+        "type": "object",
+        "properties": {
+          "message": {
+            "type": "string",
+            "nullable": false,
+            "readOnly": true
+          }
+        },
+
+        "additionalProperties": false
+      }
+    },
     "securitySchemes": {}
   },
   "info": {
@@ -63,75 +101,80 @@
   "openapi": "3.0.0",
   "paths": {
     "/articles/search": {
-		"parameters": [
-			{
-				"name": "keyword",
-				"in": "query",
-				"description": "This is the purpose of your search. Articles returned are filtered by the given keywords.",
-				"required": false,
-				"type": "string",
-				"default": ""
-			},
-			{
-				"name": "max",
-				"in": "query",
-				"description": "Specify the number of Articles will be returned",
-				"required": false,
-				"type": "int",
-				"default": ""
-			}
-		],
-		"get": {
-			"tags": [
-				"Articles"
-			],
-			"summary": "Get articles by the parameter sent",
-			"parameters": [
-				{
-					"name": "keyword",
-					"in": "query",
-					"description": "This is the purpose of your search. Articles returned are filtered by the given keywords.",
-					"required": false,
-					"type": "string",
-					"default": ""
-				},
-				{
-					"name": "max",
-					"in": "query",
-					"description": "Specify the number of Articles will be returned",
-					"required": false,
-					"type": "string",
-					"default": ""
-				}
-			],
-			"responses": {
-				"200": {
-					"description": "Success",
-					"content": {
-						"text/plain": {
-						  "schema": {
-							"$ref": "#/components/schemas/Article"
-						  }
-						},
-						"application/json": {
-						  "schema": {
-							"$ref": "#/components/schemas/Article"
-						  }
-						},
-						"text/json": {
-						  "schema": {
-							"$ref": "#/components/schemas/Article"
-						  }
-						}
-					  }
-				},
-				"404": {
-					"description": "Failed Article not found",
-					"message": "Not found"
-				}
-			}
-		}
-	}
+      "parameters": [
+        {
+          "name": "keyword",
+          "in": "query",
+          "description": "This is the purpose of your search and it is required. Articles returned are filtered by the given keyword.",
+          "required": true,
+          "type": "string",
+          "default": ""
+        },
+
+        {
+          "name": "max",
+          "in": "query",
+          "description": "Specify the number of Articles will be returned",
+          "required": false,
+          "type": "int",
+          "default": ""
+        }
+      ],
+      "get": {
+        "tags": ["Articles"],
+        "summary": "Get articles by the parameter sent",
+        "parameters": [
+          {
+            "name": "keyword",
+            "in": "query",
+            "description": "This is the purpose of your search. Articles returned are filtered by the given keywords.",
+            "required": false,
+            "type": "string",
+            "default": ""
+          },
+          {
+            "name": "max",
+            "in": "query",
+            "description": "Specify the number of Articles will be returned",
+            "required": false,
+            "type": "string",
+            "default": ""
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/Articles"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Articles"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Articles"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Failed Article not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorMessage"
+                }
+              }
+            }
+          }
+        }
+      }
+    }
   },
   "servers": [
     {
